tests/match-01/out.txt
error: non-exhaustive match
  ┌─ err.sml:3:8
  │
3 │   case A of
  │        ^

typechecking failed
